day07/lab052/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: shop-route
spec:
  parentRefs:
  - name: shop-gateway
  hostnames:
  - shop.gw.local
  rules:
  - backendRefs:
    - name: shop
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: admin-route
spec:
  parentRefs:
  - name: shop-gateway
  hostnames:
  - admin.gw.local
  rules:
  - backendRefs:
    - name: admin
      port: 80
